# atomblocks

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md  flake.nix
sample/: config.toml
src/: atoms.rs  cli.rs  config.rs  error.rs  helpers.rs  lib.rs  main.rs  types.rs
